--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="" class="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script defer src="/js/script.js"></script>
     <title>Snake Game</title>
 </head>
 <body>
-    <h1>Snake Games</h1>
+    <h1>SNAKE GAMES</h1>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
